fix: content block stretch

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -4,7 +4,7 @@
   flex: 1;
   height: 100%;
   &__todo-list {
-    margin: 50px 0 0 0;
+    margin: 50px 10px 0 10px;
     display: flex;
     flex-direction: column;
     padding: 0;
@@ -39,6 +39,7 @@
   }
   &__check,
   &__delete {
+    padding: 0;
     font-family: monospace;
     width: 60px;
     font-size: 24px;
@@ -55,7 +56,7 @@
     border: none;
     font-family: monospace;
     font-size: 24px;
-    width: fit-content;
+    width: 100%;
     overflow-wrap: anywhere;
     color: var(--foreground);
   }
